# PigWebApp

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  diesel.toml  flake.nix  module.nix  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: nix-update-flake-lock.yaml  rust-tests.yaml
client/: Cargo.toml  Makefile.toml  README.md  index.html
client/assets/: sw.js
client/src/: app.rs  data.rs  lib.rs  main.rs  modal.rs  selectable_list.rs  style.rs
client/src/data/: api.rs  mod.rs  state.rs
client/src/pages/: bulkpage.rs  errpage.rs  layout.rs  mod.rs  pigpage.rs  userpage.rs
client/src/ui/: mod.rs  modal.rs  style.rs
common/: Cargo.toml
common/src/: bulk.rs  lib.rs  pigs.rs  schema.rs  users.rs  yuri.rs
docs/: API.md  Config.md  Install.md
server/: Cargo.toml  Makefile.toml  README.md  build.rs
server/data/migrations/2025-02-14-015311_create_pigs/: down.sql  up.sql
server/data/migrations/2025-02-21-084014_create_users/: down.sql  up.sql
server/data/migrations/2025-04-25-202130_create_bulk/: down.sql  up.sql
server/src/: auth.rs  bulkapi.rs  config.rs  main.rs  pigapi.rs  userapi.rs
