# see all possible options on https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = ["client", "common", "server"]
default-members = ["server"]
resolver = "2"

# common package attributes
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["justinhschaaf"]
readme = "README.md"

# shared dependencies
[workspace.dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
form_urlencoded = "1.2.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_url_params = "0.2.1"
tokio = { version = "1.43.0", features = ["sync"] }
uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }

# server dependencies
# as much as i'd like to use diesel-async, the docs are too sparse and the autocomplete too shitty to make it viable rn
diesel = { version = "2.2.7", features = ["chrono", "postgres", "serde_json", "uuid"] }
diesel_full_text_search = "2.2.0"
diesel_migrations = "2.2.0"
figment = "0.10.19"
rocket = { version = "0.5.1", features = ["json"] }

# client dependencies
egui = "0.31.0"
egui_colors = "0.7.0"
egui_extras = { version = "0.31.0", default-features = false, features = ["serde"] }
egui_flex = "0.3.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
ehttp = { version = "0.5.0", features = ["json"] }

# web only deps
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77" # to access the DOM (to hide the loading text)

# profiles need to be defined at a higher level than individual workspace members
# this was previously in the client member
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
