# see all possible options on https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = ["client", "common", "server"]
default-members = ["server"]
resolver = "2"

# common package attributes
[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["justinhschaaf"]
readme = "README.md"

# shared dependencies
[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
form_urlencoded = "1.2.2"
log = "0.4"
paste = "1.0.15"
serde = { version = "1", features = ["derive"] }
serde_url_params = "0.2.1"
tokio = { version = "1.52.1", features = ["sync"] }
uuid = { version = "1.23.1", features = ["v4", "js", "serde"] }

# server dependencies
# as much as i'd like to use diesel-async, the docs are too sparse and the autocomplete too shitty to make it viable rn
diesel = { version = "2.3.8", features = ["chrono", "postgres", "serde_json", "uuid"] }
diesel_full_text_search = "2.3.0"
diesel_migrations = "2.3.2"
jsonwebtoken = "10.3.0"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_oauth2 = "0.5.0"

# client dependencies
egui = "0.34.1"
egui_colors = "0.11.0"
egui_extras = { version = "0.34.1", default-features = false, features = ["serde"] }
egui_flex = "0.6.0"
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
ehttp = { version = "0.7.1", features = ["json"] }
urlable = "0.2.0"

# web only deps
wasm-bindgen-futures = "0.4"
web-sys = "0.3.95" # to access the DOM (to hide the loading text)

# profiles need to be defined at a higher level than individual workspace members
# this was previously in the client member
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
