[package]
name = "pigweb_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
pigweb_common = { path = "../common" }
egui = "0.30.0"
egui_extras = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
ehttp = { version = "0.5.0", features = ["json"] }
log.workspace = true
poll-promise = { version = "0.3.0", features = ["web"] }
form_urlencoded = "1.2.1"

# depended upon by form_urlencoded, we need to manually enable js again
getrandom = { version = "*", features = ["js"] }

# You only need serde if you want app persistence:
serde.workspace = true
uuid.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)
