[package]
name = "pigweb_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
pigweb_common = { path = "../common" }
egui = "0.31.0"
egui_colors = "0.7.0"
egui_extras = { version = "0.31.0", default-features = false, features = [
    "serde"
] }
egui_flex = "0.2.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
ehttp = { version = "0.5.0", features = ["json"] }
chrono.workspace = true
log.workspace = true
tokio = { version = "1.43.0", features = ["sync"] }
form_urlencoded = "1.2.1"

# You only need serde if you want app persistence:
serde.workspace = true
uuid.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.77" # to access the DOM (to hide the loading text)
