[package]
name = "pigweb_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
pigweb_common = { path = "../common" }
chrono.workspace = true
egui.workspace = true
egui_colors.workspace = true
egui_extras.workspace = true
egui_flex.workspace = true
eframe.workspace = true
ehttp.workspace = true
form_urlencoded.workspace = true
log.workspace = true
serde.workspace = true
serde_url_params.workspace = true
tokio.workspace = true
urlable.workspace = true
uuid.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
