[package]
name = "pigweb_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
chrono.workspace = true
form_urlencoded.workspace = true
serde.workspace = true
serde_url_params.workspace = true
uuid.workspace = true

# server depends
diesel = { workspace = true, optional = true }
rocket = { workspace = true, optional = true }
rocket_oauth2 = { workspace = true, optional = true }

[features]
server = ["dep:diesel", "dep:rocket", "dep:rocket_oauth2"]
