[package]
name = "pigweb_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
pigweb_common = { path = "../common", features = ["server"] }
chrono.workspace = true
diesel.workspace = true
diesel_full_text_search.workspace = true
diesel_migrations.workspace = true
form_urlencoded.workspace = true
log.workspace = true
rocket.workspace = true
serde.workspace = true
serde_url_params.workspace = true
uuid.workspace = true
