[package]
name = "pigweb_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
pigweb_common = { path = "../common", features = ["server"] }
diesel.workspace = true
diesel_full_text_search.workspace = true
diesel_migrations.workspace = true
rocket.workspace = true
serde.workspace = true
uuid.workspace = true
