[package]
name = "pigweb_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
pigweb_common = { path = "../common", features = ["server"] }
chrono.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
jsonwebtoken.workspace = true
rocket.workspace = true
rocket_oauth2.workspace = true
serde.workspace = true
uuid.workspace = true
